# deep-value-screener

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/skills/free-data-handling/: SKILL.md
.claude/skills/value-screening-methodology/: SKILL.md
.github/workflows/: daily.yml
KNOWLEDGE/: lessons.md
data/: decisions.csv  outcomes.csv
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: DecisionButtons.jsx  DetailPanel.jsx  FilterBar.jsx  ResultsTable.jsx  Sidebar.jsx  ui.jsx
frontend/src/lib/: format.js
src/api/: __init__.py  main.py
src/screener/: __init__.py  cache.py  config.py  currency.py  feedback.py  notify.py  persist.py  pipeline.py  run.py  schema.py  scoring.py  universe.py
src/screener/data/: __init__.py  fundamentals.py  prices.py  rate_limit.py
src/screener/stages/: CLAUDE.md  __init__.py  floor.py  price_screen.py  quality.py  valuation.py  writeup.py
tests/: conftest.py  test_cache.py  test_config_and_notify.py  test_feedback.py  test_persist.py  test_pipeline.py  test_valuation_multiple.py
tests/fixtures/: config.test.yaml
